fix layout wrap on large size

--- a/src/css/imports/layout.css
+++ b/src/css/imports/layout.css
@@ -27,7 +27,7 @@ html {
     margin: 0 auto;
   }
   @media (--large) {
-    width: var(--large-width);
+    width: calc(var(--large-width) - 20rem);
   }
 }
 
@@ -296,7 +296,7 @@ label[for="id__menu-state"] {
   transition: transform 0.2s;
 }
 
-.nav__cta {
+.nav__cta { 
   flex: 0 0 100%;
   margin: 0 0 .8rem 0;
   @media (--medium) {
@@ -306,18 +306,20 @@ label[for="id__menu-state"] {
 
 .content {
   padding: 8.8rem 0 4rem 0;
+  @media (--medium) {
+    padding: 8.8rem 0 4rem 0;
+  }
 }
 
-.content--wrap {
+/*.content--wrap {
   width: inital;
   @media (--medium) {
-    padding: 9.6rem 0 4rem 0;
     width: var(--med-width);
   }
   @media (--large) {
-    width: var(--large-width);
+    width: calc(var(--large-width) - 20rem);
   }
-}
+}*/
 
 .content--flex-between {
   display: flex;
@@ -377,7 +379,7 @@ label[for="id__menu-state"] {
     width: calc(var(--med-width) + 8rem);
   }
   @media (--large) {
-    width: calc(var(--large-width) + 32rem);
+    width: calc(var(--large-width));
   }
 }
 
@@ -391,7 +393,7 @@ label[for="id__menu-state"] {
     margin: 0 auto 4.8rem auto;
   }
   @media (--large) {
-    width: var(--large-width);
+    width: calc(var(--large-width) - 20rem);
   }
 }
 
